tests/machine/x/fs/cross_join_filter.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/cross_join_filter.fs(10,3): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (9:25). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/cross_join_filter.fs(10,3): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (9:25). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/cross_join_filter.fs(10,49): error FS1129: The type 'obj' does not contain a field 'n'

/workspace/mochi/tests/machine/x/fs/cross_join_filter.fs(13,45): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon1    
The type 'obj' is not compatible with the type 'Anon1'

/workspace/mochi/tests/machine/x/fs/cross_join_filter.fs(13,57): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon1    
The type 'obj' is not compatible with the type 'Anon1'
